# chaos

./: README.md  chaos_map.py  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
src/chaos/: __init__.py  cli.py  logistic_map.py  visualization.py
src/chaos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_logistic_map.py  test_visualization.py
