[metadata]
name = chaos
version = attr: chaos.__version__
author = Pranav Thombare
author_email = pranavthombare97@gmail.com
description = A package for exploring chaos theory through the logistic map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pranavthombare/chaos
project_urls =
    Bug Tracker = https://github.com/pranavthombare/chaos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.18.0
    matplotlib>=3.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chaos = chaos.cli:main
